--- a/src/index.css
+++ b/src/index.css
@@ -1112,3 +1112,14 @@ hr {
 .foot-li:hover {
   color: #2c5bad;
 }
+
+.scroll-to-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
+
+.scroll-to-top-btn.show {
+  display: block;
+}
